[package]
name = "iascar"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Rusovac <dominik.rusovac@hotmail.com>"]
readme = "README.md"
description = "Rust Port of the iascar counter"
repository = "https://github.com/drwadu/soe"
keywords = ["propositional model counting", "answer set programming", "logic programming"]
license = "LGPL-2.1"

[dependencies]
rug = "1.16.0"
itertools = "0.10.5"
rayon = "1.5"

[features]
verbose = []
prefilter = []
seq = []
eet = []
dbg = []
