[package]
name = "iascar"
version = "0.1.0"
edition = "2021"
authors = ["drwadu <alamzan94@live.de>"]
readme = "README.md"
description = "iascar - incremental answer set count with anytime refinement"
repository = "https://github.com/drwadu/iascar"
keywords = ["propositional model counting", "answer set programming", "logic programming"]
license = "LGPL-2.1"

[dependencies]
rug = "1.16.0"
itertools = "0.10.5"
rayon = "1.5"
clingo = { version = "0.7.2", features = ["static-linking"] }
thiserror = "1.0"

[features]
prefilter = []
seq = []
eet = []
dbg = []

[lib]
name = "iascar"
path = "src/lib.rs"
test = true
edition = "2021"       
crate-type = ["lib"]   
