[package]
name = "iascar"
version = "0.1.0"
edition = "2021"
authors = ["drwadu"]
readme = "README.md"
description = "iascar - incremental answer set count with anytime refinement"
repository = "https://github.com/drwadu/iascar"
license = "MIT"

[dependencies]
rug = "1.16.0"
itertools = "0.10.5"
rayon = "1.5"
clingo = { version = "0.7.2", features = ["static-linking"] }
savan = "0.2.0"
thiserror = "1.0"

[features]
prefilter = []
seq = []

[lib]
name = "iascar"
path = "src/lib.rs"
test = true
edition = "2021"       
crate-type = ["lib"]   

[[bin]]
name = "iascar"
path = "src/main.rs"
edition = "2021"       
